--- a/.github/actions/local-build-test/action.yml
+++ b/.github/actions/local-build-test/action.yml
@@ -18,19 +18,24 @@ runs:
     run: |
       echo "PI_CI_REFERENCE=local" >> $GITHUB_ENV
       continue-on-error: false
+    shell: bash
 
   # Setup .Net with global.json
   - name: Setup .NET
     uses: actions/setup-dotnet@v1
+    shell: bash
       
   # Restore dependencies
   - name: Restore
     run: dotnet restore
+    shell: bash
     
   # Build
   - name: Build
     run: dotnet build --no-restore
+    shell: bash
       
   # Test
   - name: Test
     run: dotnet test --no-build --verbosity normal
+    shell: bash
