--- a/.github/actions/build-test/action.yml
+++ b/.github/actions/build-test/action.yml
@@ -5,6 +5,9 @@ inputs:
     description: 'The build configuration'
     default: Release
     required: true
+  working-directory:
+    description: 'The working directory'
+    required: true
 runs:
   using: "composite"
   steps:
@@ -17,13 +20,16 @@ runs:
   - name: Restore
     run: dotnet restore
     shell: bash
+    working-directory: ${{ inputs.working-directory }}
     
   # Build
   - name: Build
     run: dotnet build --no-restore -c ${{ inputs.config }}
     shell: bash
+    working-directory: ${{ inputs.working-directory }}
       
   # Test
   - name: Test
     run: dotnet test --no-build --verbosity normal
     shell: bash
+    working-directory: ${{ inputs.working-directory }}
