--- a/.github/actions/build-test/action.yml
+++ b/.github/actions/build-test/action.yml
@@ -18,6 +18,7 @@ runs:
   # Setup .Net with global.json
   - name: Setup .NET
     uses: actions/setup-dotnet@v1
+    with:
       dotnet-version: ${{ inputs.net-sdk }}
       
   # Restore dependencies
