--- a/releases/releases-index.json
+++ b/releases/releases-index.json
@@ -1,10 +1,17 @@
 {
     "protocols" :{
       
-    }
+    },
     "ux": {
-  
-  
-}
-  
+    
+},
+"data":{
+    
+},
+"oneimlx"{
+    
+},
+"cli"{
+    
+}  
 }
